@@ -174,7 +174,10 @@ var in foreach command with tests
 New file tests: ScopeVar.ajs, ScopeVarFor.ajs, ScopeVarForEach.ajs
 IBindingEnviroment.SetLocalValue
 StyleCop improvement
-
+New file test: ClassObjectNoThis.ajs
+machine.Environment is a BindingEnvironment (it was a LocalBindingEnvironment)
+BindingEnvironment set value on parent if it is ObjectEnvironment and name is defined in object
+LocalBindingEnvironment set value on parent if it is not null and not local defined
 
 
 
